加入登录xml文件

--- a/app/src/main/res/layout/test_activity.xml
+++ b/app/src/main/res/layout/test_activity.xml
@@ -10,6 +10,7 @@
     tools:context="com.example.mdxj.activity.WelcomeActivity" >
 
     <TextView
+        android:layout_marginLeft="@dimen/dimen_15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
