--- a/app/src/main/res/layout/activity_cone.xml
+++ b/app/src/main/res/layout/activity_cone.xml
@@ -5,41 +5,65 @@
     android:layout_height="match_parent"
     android:background="#ffffff" >
 
-    <RelativeLayout
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_top_bar"
-        android:layout_alignParentTop="true"
-        android:background="@color/common_top_bar_blue" >
+	<RelativeLayout
+		android:id="@+id/title"
+		android:layout_width="match_parent"
+		android:layout_height="@dimen/height_top_bar"
+		android:layout_alignParentTop="true"
+		android:background="@color/common_top_bar_blue" >
+		<ImageView
+			android:id="@+id/iv_back"
+			android:layout_width="40dp"
+			android:layout_height="match_parent"
+			android:layout_alignParentLeft="true"
+			android:layout_centerVertical="true"
+			android:onClick="back"
+			android:paddingBottom="5dp"
+			android:paddingLeft="5dp"
+			android:paddingRight="5dp"
+			android:paddingTop="5dp"
+			android:scaleType="centerInside"
+			android:src="@drawable/top_bar_back" />
 
-        <TextView
-        	android:id="@+id/tv_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:text="电网核查"
-            android:textColor="#ffffff"
-            android:textSize="18sp" />
-	    <RelativeLayout
-	        android:id="@+id/re_setting"
-	        android:layout_width="wrap_content"
-	        android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-        	android:background="@drawable/title_bg"
-	        android:clickable="true" >
-		    <ImageView
-		        android:layout_width="24dp"
-		        android:layout_height="24dp"
-            	android:layout_marginLeft="20dp"
-            	android:layout_marginRight="20dp"
-		        android:layout_centerInParent="true"
-		        android:background="@drawable/setting_icon" />
-	    </RelativeLayout>
-    </RelativeLayout>
-    
+		<View
+			android:id="@+id/view_temp"
+			android:layout_width="1dp"
+			android:layout_height="match_parent"
+			android:layout_marginBottom="8dp"
+			android:layout_marginTop="8dp"
+			android:layout_toRightOf="@id/iv_back"
+			android:background="#14191A" />
+
+		<TextView
+			android:id="@+id/tv_title"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_centerVertical="true"
+			android:layout_marginLeft="10dp"
+			android:layout_toRightOf="@id/view_temp"
+			android:text="坐标"
+			android:textColor="#ffffff"
+			android:textSize="18sp" />
+
+		<RelativeLayout
+			android:id="@+id/re_gps"
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:layout_alignParentRight="true"
+			android:layout_centerVertical="true"
+			android:background="@drawable/title_bg"
+			android:clickable="true"
+			android:visibility="gone" >
+			<ImageView
+				android:id="@+id/iv_gps"
+				android:layout_width="24dp"
+				android:layout_height="24dp"
+				android:layout_marginLeft="20dp"
+				android:layout_marginRight="20dp"
+				android:layout_centerInParent="true"
+				android:background="@drawable/wn_gps" />
+		</RelativeLayout>
+	</RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/re_operation"
