添加自定义CustomProgressDialog，动画形式，图片可更改 设置里姓名的更改，改为获取登录的姓名并保存，二级页面图片更改 ，对应关系正在更改

--- a/app/src/main/res/layout/item_catagorytwo.xml
+++ b/app/src/main/res/layout/item_catagorytwo.xml
@@ -4,12 +4,15 @@
     android:layout_height="match_parent"
     android:paddingTop="2dp" >
 
-    <RelativeLayout
+	<RelativeLayout
         android:id="@+id/re_parent"
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:background="@drawable/btn_list_item_bg"
-        android:focusable="false" >
+        android:focusable="false"
+		android:layout_alignParentTop="true"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentStart="true">
 
 
     <RelativeLayout
@@ -23,24 +26,24 @@
             android:id="@+id/iv_avatar"
             android:layout_width="50dp"
             android:layout_height="50dp"
-        	android:layout_centerInParent="true"
+            android:layout_centerInParent="true"
             android:src="@drawable/catagorytwo" />
         <ImageView
             android:id="@+id/iv_avatarL"
             android:layout_width="16dp"
             android:layout_height="16dp"
-			android:layout_centerVertical="true"
-			android:layout_alignParentLeft="true"
-			android:layout_marginLeft="19dp"
-			android:layout_marginRight="2dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="19dp"
+            android:layout_marginRight="2dp"
             android:visibility="gone" />
         <ImageView
             android:id="@+id/iv_avatarR"
             android:layout_width="16dp"
             android:layout_height="16dp"
-			android:layout_centerVertical="true"
-			android:layout_alignParentRight="true"
-			android:layout_marginRight="18dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="18dp"
             android:visibility="gone" />
     </RelativeLayout>
 
@@ -62,20 +65,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-	    android:layout_marginRight="10dp"
-       	android:layout_alignParentRight="true"
-       	android:layout_alignParentTop="true"
+        android:layout_marginRight="10dp"
+           android:layout_alignParentRight="true"
+           android:layout_alignParentTop="true"
         android:text=""
         android:textColor="#AAAAAA"
         android:textSize="14sp" />
-    
+
   <ImageView
         android:id="@+id/iv_select"
         android:layout_width="32dp"
         android:layout_height="32dp"
-	    android:layout_alignParentBottom="true"
-	    android:layout_alignParentRight="true"
-	    android:layout_marginRight="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
         android:layout_marginBottom="5dp"
         android:src="@drawable/dx_checkbox_gray_on"
         android:visibility="gone" />
@@ -115,11 +118,11 @@
         android:text=""
         android:textColor="#ffffff"
         android:textSize="12sp" />
-    
+
     <View
-	    android:layout_width="match_parent"
-	    android:layout_height="0.1dp"
-	    android:background="#dadada"
-	    android:layout_alignParentBottom="true"/>
-	</RelativeLayout>
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="#dadada"
+        android:layout_alignParentBottom="true"/>
+    </RelativeLayout>
 </RelativeLayout>
