--- a/app/src/main/res/layout/item_catagoryone.xml
+++ b/app/src/main/res/layout/item_catagoryone.xml
@@ -9,7 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:background="@drawable/btn_list_item_bg"
-        android:focusable="false" >
+        android:focusable="false"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
 
     <RelativeLayout
@@ -24,9 +27,9 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
         	android:layout_centerInParent="true"
-            android:src="@drawable/folder_close" />
+            android:src="@drawable/caid__50" />
     </RelativeLayout>
-    
+
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
@@ -51,7 +54,7 @@
         android:text=""
         android:textColor="#AAAAAA"
         android:textSize="14sp" />
-    
+
   <ImageView
         android:id="@+id/iv_select"
         android:layout_width="32dp"
@@ -98,7 +101,7 @@
         android:text=""
         android:textColor="#ffffff"
         android:textSize="12sp" />
-    
+
     <View
 	    android:layout_width="match_parent"
 	    android:layout_height="0.1dp"
