--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="dots_color">#FE2E64</color>
     <color name="darker_gray">#aaa</color>
-
+    <color name="darkgrey"> #C0C0C0</color>
+    <color name="red"> #FF0000</color>
     <color name="dark_yellow">#FE9A2E</color>
     <color name="button_color">#01DFA5</color>
     <color name="common_top_bar_blue">#22292c</color>
