--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -107,7 +107,7 @@
                 android:textColor="@color/text_head"
                 android:textSize="@dimen/dp_14" />
             <Button
-                android:visibility="invisible"
+                android:visibility="visible"
                 android:id="@+id/button_clear_psw"
                 android:layout_width="@dimen/dp_14"
                 android:layout_height="@dimen/dp_14"
@@ -115,6 +115,24 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/dp_20"
                 android:background="@mipmap/clean_edit_pic" />
+
+            <LinearLayout
+                android:layout_marginRight="@dimen/dimen_15"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/button_clear_psw"
+                android:id="@+id/linearpassword"
+                android:layout_width="@dimen/dp_14"
+                android:layout_height="@dimen/dp_14"
+                android:gravity="center_vertical"
+               >
+                <ImageView
+                    android:id="@+id/ivshow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@mipmap/biyan"
+                    android:scaleType="centerCrop" />
+            </LinearLayout>
+
         </RelativeLayout>
 
         <RelativeLayout
