--- a/app/src/main/res/layout/activity_ctwo.xml
+++ b/app/src/main/res/layout/activity_ctwo.xml
@@ -44,25 +44,17 @@
             android:text="坐标"
             android:textColor="#ffffff"
             android:textSize="18sp" />
-  
-	    <RelativeLayout
-	        android:id="@+id/re_gps"
-	        android:layout_width="wrap_content"
-	        android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-        	android:background="@drawable/title_bg"
-	        android:clickable="true"
-	        android:visibility="gone" >
-		    <ImageView
-	        	android:id="@+id/iv_gps"
-		        android:layout_width="24dp"
-		        android:layout_height="24dp"
-            	android:layout_marginLeft="20dp"
-            	android:layout_marginRight="20dp"
-		        android:layout_centerInParent="true"
-		        android:background="@drawable/wn_gps" />
-	    </RelativeLayout>
+		<ImageView
+			android:id="@+id/iv_map"
+			android:paddingBottom="5dp"
+			android:paddingLeft="5dp"
+			android:paddingRight="5dp"
+			android:paddingTop="5dp"
+			android:src="@mipmap/map"
+			android:layout_alignParentRight="true"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content" />
+
     </RelativeLayout>
     
 
