--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+	android:layout_width="@dimen/dp_280"
+	android:layout_height="@dimen/dp_136"
+	android:background="@mipmap/my_mainbg"
     android:orientation="vertical" >
 
     <LinearLayout
@@ -10,78 +11,86 @@
         android:layout_gravity="center"
         android:background="#ffffff"
         android:orientation="vertical"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp" >
+        android:paddingLeft="@dimen/dp_5"
+        android:paddingRight="@dimen/dp_5" >
 
         <LinearLayout
             android:id="@+id/ll_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+			android:layout_height="@dimen/dp_45"
             android:orientation="vertical"
-            android:visibility="gone" >
+            android:visibility="visible" >
 
             <TextView
                 android:id="@+id/tv_title"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
+                android:layout_height="match_parent"
                 android:background="@drawable/bg_white_aaaaaa"
                 android:gravity="center_vertical"        
                 android:textColor="#3cac17"
-                android:textSize="18sp" />
+                android:textSize="@dimen/sp_15" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#BCBCBC" />
+
         </LinearLayout>
-
+		<ImageView
+			android:layout_width="fill_parent"
+			android:layout_height="@dimen/dp_0.5"
+			android:background="@color/btn_gray_pressed" />
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+			android:layout_height="@dimen/dp_45"
 	        android:gravity="center_horizontal"
             android:orientation="vertical">
 		    
 	        <TextView
                 android:id="@+id/tv_content"
 	            android:layout_width="match_parent"
-	            android:layout_height="64dp"
+	            android:layout_height="match_parent"
 	            android:gravity="center_vertical"
 	            android:text=""
-	            android:textColor="#353535"
-	            android:textSize="16sp" />
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#BCBCBC" />
-        </LinearLayout>
+	            android:textColor="@color/btn_gray_pressed"
+	            android:textSize="@dimen/sp_15" />
 
+        </LinearLayout>
+		<ImageView
+			android:layout_width="fill_parent"
+			android:layout_height="@dimen/dp_0.5"
+			android:background="@color/btn_gray_pressed" />
         <LinearLayout
+			android:orientation="horizontal"
 	        android:id="@+id/ll_doing"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dp_45"
         	android:background="@drawable/btn_list_item_bg">
-	        <TextView
+			<Button
+				android:id="@+id/ll_doing_ng"
+				android:layout_width="0dp"
+
+				android:layout_weight="1"
+				android:layout_height="fill_parent"
+				android:layout_gravity="center"
+				android:text="取消"
+				android:textColor="#3cac17"
+				android:background="@drawable/btn_list_item_bg"
+				android:textSize="@dimen/sp_15"
+			 />
+			<ImageView
+				android:layout_width="@dimen/dp_0.5"
+				android:layout_height="fill_parent"
+				android:background="@color/btn_gray_pressed" />
+
+			<Button
 	        	android:id="@+id/ll_doing_ok"
 	            android:layout_width="0dp"
-	            android:layout_height="48dp"
 	            android:layout_weight="1"
-	            android:gravity="center"
+				android:layout_height="fill_parent"
+				android:layout_gravity="center"
 	            android:text="确认"
-	            android:textColor="#353535"
+				android:textColor="#3cac17"
         		android:background="@drawable/btn_list_item_bg"
-	            android:textSize="16sp"
-	            android:clickable="true" />
-	        <TextView
-	        	android:id="@+id/ll_doing_ng"
-	            android:layout_width="0dp"
-	            android:layout_height="48dp"
-	            android:layout_weight="1"
-	            android:gravity="center"
-	            android:text="取消"
-	            android:textColor="#353535"
-        		android:background="@drawable/btn_list_item_bg"
-	            android:textSize="16sp"
-	            android:clickable="true" />
+	            android:textSize="@dimen/sp_15"
+	          />
+
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
