--- a/app/src/main/res/layout/code_dialog.xml
+++ b/app/src/main/res/layout/code_dialog.xml
@@ -1,66 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ffffff"
+	android:layout_width="@dimen/dp_280"
+	android:layout_height="@dimen/dp_136"
+	android:background="@mipmap/my_mainbg"
     android:orientation="vertical" 
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp">
+    android:paddingLeft="@dimen/dp_5"
+    android:paddingRight="@dimen/dp_5">
 
      <LinearLayout
          android:id="@+id/ll_title"
          android:layout_width="match_parent"
-         android:layout_height="wrap_content"
+         android:layout_height="@dimen/dp_45"
          android:orientation="vertical"
-         android:visibility="gone" >
+         android:visibility="visible" >
          <TextView
+			 android:layout_marginLeft="@dimen/dp_5"
              android:id="@+id/tv_title"
              android:layout_width="match_parent"
-             android:layout_height="48dp"
-             android:background="@drawable/bg_white_aaaaaa"
+             android:layout_height="match_parent"
              android:gravity="center_vertical"        
              android:textColor="#3cac17"
-             android:textSize="18sp" />
-         <View
-             android:layout_width="match_parent"
-             android:layout_height="1dp"
-             android:background="#BCBCBC" />
+             android:textSize="@dimen/sp_15" />
      </LinearLayout>
-
+	<ImageView
+		android:layout_width="fill_parent"
+		android:layout_height="@dimen/dp_0.5"
+		android:background="@color/btn_gray_pressed" />
      <LinearLayout
+		 android:background="@mipmap/edit_bg"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:orientation="vertical">
-
 	   <EditText
 	       android:id="@+id/et_content"
-	       android:layout_marginTop="20dp"
 	       android:layout_width="match_parent"
-	       android:layout_height="36dp"
-	       android:background="@drawable/edittext_login"
+	       android:layout_height="@dimen/dp_45"
+		   android:background="@null"
 	       android:inputType="phone"
 	       android:singleLine="true"	      
-	       android:textColor="#353535"
-	       android:textSize="16sp" />
-         <View
-             android:layout_width="match_parent"
-             android:layout_height="1dp"
-             android:background="#BCBCBC" />
-     </LinearLayout>
+	       android:textColor="@color/btn_gray_pressed"
+	       android:textSize="@dimen/sp_15" />
 
+     </LinearLayout>
+	<ImageView
+		android:layout_width="fill_parent"
+		android:layout_height="@dimen/dp_0.5"
+		android:background="@color/btn_gray_pressed" />
      <LinearLayout
-      android:id="@+id/ll_doing"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
+        android:id="@+id/ll_doing"
+         android:layout_width="fill_parent"
+		 android:layout_height="@dimen/dp_45"
      	android:background="@drawable/btn_list_item_bg"
-         android:orientation="vertical">
-      <TextView
-          android:layout_width="match_parent"
-          android:layout_height="48dp"
-          android:gravity="center"
-          android:text="确定"
-          android:textColor="#353535"
-          android:textSize="18sp" />
+         android:orientation="horizontal">
+		 <Button
+			 android:textSize="@dimen/sp_15"
+			 android:textColor="#3cac17"
+			 android:id="@+id/btn_cancel"
+			 android:layout_width="fill_parent"
+			 android:layout_height="fill_parent"
+			 android:layout_gravity="center"
+			 android:layout_weight="1"
+			 android:background="@drawable/listitem_bk"
+			 android:text="取消" />
+
+		 <ImageView
+			 android:layout_width="@dimen/dp_0.5"
+			 android:layout_height="fill_parent"
+			 android:background="@color/btn_gray_pressed" />
+
+		 <Button
+			 android:textSize="@dimen/sp_15"
+			 android:textColor="#3cac17"
+			 android:id="@+id/btn_ok"
+			 android:layout_width="fill_parent"
+			 android:layout_height="fill_parent"
+			 android:layout_gravity="center"
+			 android:layout_weight="1"
+			 android:background="@drawable/listitem_bk"
+			 android:text="确定" />
      </LinearLayout>
 </LinearLayout>
