--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="dots_color">#FE2E64</color>
     <color name="darker_gray">#aaa</color>
     <color name="darkgrey"> #C0C0C0</color>
+    <color name="transparent">#00000000</color>
     <color name="red"> #FF0000</color>
     <color name="dark_yellow">#FE9A2E</color>
     <color name="button_color">#01DFA5</color>
@@ -41,4 +42,5 @@
     <color name="voip_interface_text_color">#bababa</color>
     <color name="black_deep">#FF000000</color>
     <color name="button_back">#9BDFD5</color>
+    <color name="layoutpressedclo">#88008ae6</color>
 </resources>
