--- a/app/src/main/res/values-w384dp/dimens.xml
+++ b/app/src/main/res/values-w384dp/dimens.xml
@@ -202,8 +202,21 @@
 	<dimen name="sp_20">21.33sp</dimen>
 	<dimen name="sp_21">22.40sp</dimen>
 	<dimen name="sp_22">23.47sp</dimen>
+	<dimen name="sp_23">24.53sp</dimen>
 	<dimen name="sp_24">25.60sp</dimen>
+	<dimen name="sp_25">26.67sp</dimen>
+	<dimen name="sp_26">27.73sp</dimen>
+	<dimen name="sp_27">28.80sp</dimen>
 	<dimen name="sp_28">29.87sp</dimen>
+	<dimen name="sp_29">30.93sp</dimen>
+	<dimen name="sp_30">32.00sp</dimen>
+	<dimen name="sp_31">33.07sp</dimen>
+	<dimen name="sp_32">34.13sp</dimen>
+	<dimen name="sp_33">35.20sp</dimen>
+	<dimen name="sp_34">36.27sp</dimen>
+	<dimen name="sp_35">37.33sp</dimen>
+	<dimen name="sp_36">38.40sp</dimen>
+	<dimen name="sp_37">39.47sp</dimen>
 	<dimen name="sp_38">40.53sp</dimen>
 	<dimen name="sp_40">42.67sp</dimen>
 	<dimen name="sp_41">43.73sp</dimen>
