--- a/app/src/main/res/values-w400dp/dimens.xml
+++ b/app/src/main/res/values-w400dp/dimens.xml
@@ -202,8 +202,21 @@
 	<dimen name="sp_20">22.22sp</dimen>
 	<dimen name="sp_21">23.33sp</dimen>
 	<dimen name="sp_22">24.44sp</dimen>
+	<dimen name="sp_23">25.56sp</dimen>
 	<dimen name="sp_24">26.67sp</dimen>
+	<dimen name="sp_25">27.78sp</dimen>
+	<dimen name="sp_26">28.89sp</dimen>
+	<dimen name="sp_27">30.00sp</dimen>
 	<dimen name="sp_28">31.11sp</dimen>
+	<dimen name="sp_29">32.22sp</dimen>
+	<dimen name="sp_30">33.33sp</dimen>
+	<dimen name="sp_31">34.44sp</dimen>
+	<dimen name="sp_32">35.56sp</dimen>
+	<dimen name="sp_33">36.67sp</dimen>
+	<dimen name="sp_34">37.78sp</dimen>
+	<dimen name="sp_35">38.89sp</dimen>
+	<dimen name="sp_36">40.00sp</dimen>
+	<dimen name="sp_37">41.11sp</dimen>
 	<dimen name="sp_38">42.22sp</dimen>
 	<dimen name="sp_40">44.44sp</dimen>
 	<dimen name="sp_41">45.56sp</dimen>
