--- a/app/src/main/res/values-w411dp/dimens.xml
+++ b/app/src/main/res/values-w411dp/dimens.xml
@@ -202,8 +202,21 @@
 	<dimen name="sp_20">22.83sp</dimen>
 	<dimen name="sp_21">23.97sp</dimen>
 	<dimen name="sp_22">25.12sp</dimen>
+	<dimen name="sp_23">26.26sp</dimen>
 	<dimen name="sp_24">27.40sp</dimen>
+	<dimen name="sp_25">28.54sp</dimen>
+	<dimen name="sp_26">29.68sp</dimen>
+	<dimen name="sp_27">30.82sp</dimen>
 	<dimen name="sp_28">31.97sp</dimen>
+	<dimen name="sp_29">33.11sp</dimen>
+	<dimen name="sp_30">34.25sp</dimen>
+	<dimen name="sp_31">35.39sp</dimen>
+	<dimen name="sp_32">36.53sp</dimen>
+	<dimen name="sp_33">37.67sp</dimen>
+	<dimen name="sp_34">38.82sp</dimen>
+	<dimen name="sp_35">39.96sp</dimen>
+	<dimen name="sp_36">41.10sp</dimen>
+	<dimen name="sp_37">42.24sp</dimen>
 	<dimen name="sp_38">43.38sp</dimen>
 	<dimen name="sp_40">45.67sp</dimen>
 	<dimen name="sp_41">46.81sp</dimen>
