--- a/app/src/main/res/values-w533dp/dimens.xml
+++ b/app/src/main/res/values-w533dp/dimens.xml
@@ -202,8 +202,21 @@
 	<dimen name="sp_20">29.61sp</dimen>
 	<dimen name="sp_21">31.09sp</dimen>
 	<dimen name="sp_22">32.57sp</dimen>
+	<dimen name="sp_23">34.05sp</dimen>
 	<dimen name="sp_24">35.53sp</dimen>
+	<dimen name="sp_25">37.01sp</dimen>
+	<dimen name="sp_26">38.49sp</dimen>
+	<dimen name="sp_27">39.97sp</dimen>
 	<dimen name="sp_28">41.46sp</dimen>
+	<dimen name="sp_29">42.94sp</dimen>
+	<dimen name="sp_30">44.42sp</dimen>
+	<dimen name="sp_31">45.90sp</dimen>
+	<dimen name="sp_32">47.38sp</dimen>
+	<dimen name="sp_33">48.86sp</dimen>
+	<dimen name="sp_34">50.34sp</dimen>
+	<dimen name="sp_35">51.82sp</dimen>
+	<dimen name="sp_36">53.30sp</dimen>
+	<dimen name="sp_37">54.78sp</dimen>
 	<dimen name="sp_38">56.26sp</dimen>
 	<dimen name="sp_40">59.22sp</dimen>
 	<dimen name="sp_41">60.70sp</dimen>
