--- a/app/src/main/res/values-w640dp/dimens.xml
+++ b/app/src/main/res/values-w640dp/dimens.xml
@@ -202,8 +202,21 @@
 	<dimen name="sp_20">35.56sp</dimen>
 	<dimen name="sp_21">37.33sp</dimen>
 	<dimen name="sp_22">39.11sp</dimen>
+	<dimen name="sp_23">40.89sp</dimen>
 	<dimen name="sp_24">42.67sp</dimen>
+	<dimen name="sp_25">44.44sp</dimen>
+	<dimen name="sp_26">46.22sp</dimen>
+	<dimen name="sp_27">48.00sp</dimen>
 	<dimen name="sp_28">49.78sp</dimen>
+	<dimen name="sp_29">51.56sp</dimen>
+	<dimen name="sp_30">53.33sp</dimen>
+	<dimen name="sp_31">55.11sp</dimen>
+	<dimen name="sp_32">56.89sp</dimen>
+	<dimen name="sp_33">58.67sp</dimen>
+	<dimen name="sp_34">60.44sp</dimen>
+	<dimen name="sp_35">62.22sp</dimen>
+	<dimen name="sp_36">64.00sp</dimen>
+	<dimen name="sp_37">65.78sp</dimen>
 	<dimen name="sp_38">67.56sp</dimen>
 	<dimen name="sp_40">71.11sp</dimen>
 	<dimen name="sp_41">72.89sp</dimen>
