--- a/app/src/main/res/values-w720dp/dimens.xml
+++ b/app/src/main/res/values-w720dp/dimens.xml
@@ -202,8 +202,21 @@
 	<dimen name="sp_20">40.00sp</dimen>
 	<dimen name="sp_21">42.00sp</dimen>
 	<dimen name="sp_22">44.00sp</dimen>
+	<dimen name="sp_23">46.00sp</dimen>
 	<dimen name="sp_24">48.00sp</dimen>
+	<dimen name="sp_25">50.00sp</dimen>
+	<dimen name="sp_26">52.00sp</dimen>
+	<dimen name="sp_27">54.00sp</dimen>
 	<dimen name="sp_28">56.00sp</dimen>
+	<dimen name="sp_29">58.00sp</dimen>
+	<dimen name="sp_30">60.00sp</dimen>
+	<dimen name="sp_31">62.00sp</dimen>
+	<dimen name="sp_32">64.00sp</dimen>
+	<dimen name="sp_33">66.00sp</dimen>
+	<dimen name="sp_34">68.00sp</dimen>
+	<dimen name="sp_35">70.00sp</dimen>
+	<dimen name="sp_36">72.00sp</dimen>
+	<dimen name="sp_37">74.00sp</dimen>
 	<dimen name="sp_38">76.00sp</dimen>
 	<dimen name="sp_40">80.00sp</dimen>
 	<dimen name="sp_41">82.00sp</dimen>
