--- a/app/src/main/res/values-w768dp/dimens.xml
+++ b/app/src/main/res/values-w768dp/dimens.xml
@@ -202,8 +202,21 @@
 	<dimen name="sp_20">42.67sp</dimen>
 	<dimen name="sp_21">44.80sp</dimen>
 	<dimen name="sp_22">46.93sp</dimen>
+	<dimen name="sp_23">49.07sp</dimen>
 	<dimen name="sp_24">51.20sp</dimen>
+	<dimen name="sp_25">53.33sp</dimen>
+	<dimen name="sp_26">55.47sp</dimen>
+	<dimen name="sp_27">57.60sp</dimen>
 	<dimen name="sp_28">59.73sp</dimen>
+	<dimen name="sp_29">61.87sp</dimen>
+	<dimen name="sp_30">64.00sp</dimen>
+	<dimen name="sp_31">66.13sp</dimen>
+	<dimen name="sp_32">68.27sp</dimen>
+	<dimen name="sp_33">70.40sp</dimen>
+	<dimen name="sp_34">72.53sp</dimen>
+	<dimen name="sp_35">74.67sp</dimen>
+	<dimen name="sp_36">76.80sp</dimen>
+	<dimen name="sp_37">78.93sp</dimen>
 	<dimen name="sp_38">81.07sp</dimen>
 	<dimen name="sp_40">85.33sp</dimen>
 	<dimen name="sp_41">87.47sp</dimen>
