--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -202,8 +202,21 @@
 	<dimen name="sp_20">45.56sp</dimen>
 	<dimen name="sp_21">47.83sp</dimen>
 	<dimen name="sp_22">50.11sp</dimen>
+	<dimen name="sp_23">52.39sp</dimen>
 	<dimen name="sp_24">54.67sp</dimen>
+	<dimen name="sp_25">56.94sp</dimen>
+	<dimen name="sp_26">59.22sp</dimen>
+	<dimen name="sp_27">61.50sp</dimen>
 	<dimen name="sp_28">63.78sp</dimen>
+	<dimen name="sp_29">66.06sp</dimen>
+	<dimen name="sp_30">68.33sp</dimen>
+	<dimen name="sp_31">70.61sp</dimen>
+	<dimen name="sp_32">72.89sp</dimen>
+	<dimen name="sp_33">75.17sp</dimen>
+	<dimen name="sp_34">77.44sp</dimen>
+	<dimen name="sp_35">79.72sp</dimen>
+	<dimen name="sp_36">82.00sp</dimen>
+	<dimen name="sp_37">84.28sp</dimen>
 	<dimen name="sp_38">86.56sp</dimen>
 	<dimen name="sp_40">91.11sp</dimen>
 	<dimen name="sp_41">93.39sp</dimen>
