--- a/app/src/main/res/layout/activity_cthree.xml
+++ b/app/src/main/res/layout/activity_cthree.xml
@@ -13,24 +13,24 @@
         android:background="@color/common_top_bar_blue" >
         <ImageView
             android:id="@+id/iv_back"
-            android:layout_width="40dp"
+            android:layout_width="@dimen/dp_40"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:onClick="back"
-            android:paddingBottom="5dp"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:paddingTop="5dp"
+            android:paddingBottom="@dimen/dp_5"
+            android:paddingLeft="@dimen/dp_5"
+            android:paddingRight="@dimen/dp_5"
+            android:paddingTop="@dimen/dp_5"
             android:scaleType="centerInside"
             android:src="@drawable/top_bar_back" />
 
         <View
             android:id="@+id/view_temp"
-            android:layout_width="1dp"
+            android:layout_width="@dimen/dp_1"
             android:layout_height="match_parent"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginBottom="@dimen/dp_1"
+            android:layout_marginTop="@dimen/dp_1"
             android:layout_toRightOf="@id/iv_back"
             android:background="#14191A" />
 
@@ -39,22 +39,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="@dimen/dp_10"
             android:layout_toRightOf="@id/view_temp"
             android:text="照片"
             android:textColor="#ffffff"
-            android:textSize="18sp" />
+            android:textSize="@dimen/sp_18" />
 
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="@dimen/dp_10"
             android:layout_toRightOf="@id/tv_temp_title"
             android:text=""
             android:textColor="#ffffff"
-            android:textSize="18sp" />
+            android:textSize="@dimen/sp_18" />
         
 	    <RelativeLayout
 	        android:id="@+id/re_gps"
@@ -66,10 +66,10 @@
 	        android:clickable="true" >
 		    <ImageView
 	        	android:id="@+id/iv_gps"
-		        android:layout_width="24dp"
-		        android:layout_height="24dp"
-            	android:layout_marginLeft="20dp"
-            	android:layout_marginRight="20dp"
+		        android:layout_width="@dimen/dp_24"
+		        android:layout_height="@dimen/dp_24"
+            	android:layout_marginLeft="@dimen/dp_20"
+            	android:layout_marginRight="@dimen/dp_20"
 		        android:layout_centerInParent="true"
 		        android:background="@drawable/wn_gps" />
 	    </RelativeLayout>
@@ -79,28 +79,28 @@
     <RelativeLayout
         android:id="@+id/re_operation"
         android:layout_width="match_parent"
-        android:layout_height="58dp"
+        android:layout_height="@dimen/dp_58"
         android:layout_alignParentBottom="true"
         android:background="@drawable/operation__bg"
         android:clickable="true" >
 	    <RelativeLayout
 	        android:id="@+id/re_selectall_cancel"
-	        android:layout_width="80dp"
-	        android:layout_height="58dp"
+	        android:layout_width="@dimen/dp_80"
+	        android:layout_height="@dimen/dp_58"
 	        android:layout_alignParentLeft="true"
 	        android:background="@drawable/operation__bg"
 	        android:clickable="true"
 	        android:visibility="gone" >		
 		    <ImageView
-		        android:layout_width="18dp"
-		        android:layout_height="18dp"
+		        android:layout_width="@dimen/dp_18"
+		        android:layout_height="@dimen/dp_18"
 		        android:layout_centerInParent="true"
-	        	android:layout_marginLeft="10dp"
+	        	android:layout_marginLeft="@dimen/dp_10"
 		        android:background="@drawable/icon_cancel" />
 	    </RelativeLayout>
 	    <ImageView
         	android:id="@+id/iv_operation"
-	        android:layout_width="36dp"
+	        android:layout_width="@dimen/dp_36"
 	        android:layout_height="36dp"
 	        android:layout_centerInParent="true"
 	        android:background="@drawable/icon_delete"
@@ -108,7 +108,7 @@
 	     <LinearLayout
 		    android:id="@+id/ll_operation"
 	        android:layout_width="match_parent"
-	        android:layout_height="58dp">
+	        android:layout_height="@dimen/dp_58">
 		    <RelativeLayout
 		        android:id="@+id/re_operation_photo"
 		        android:layout_width="0dp"
@@ -117,16 +117,16 @@
 		        android:background="@drawable/operation__bg"
 		        android:clickable="true" >
 			    <ImageView
-			        android:layout_width="36dp"
-			        android:layout_height="36dp"
+			        android:layout_width="@dimen/dp_36"
+			        android:layout_height="@dimen/dp_36"
 			        android:layout_centerInParent="true"
 			        android:background="@drawable/photo_normal" />
 		        <View
-		            android:layout_width="1dp"
+		            android:layout_width="@dimen/dp_1"
 		            android:layout_height="match_parent"
 		            android:layout_alignParentRight="true"
-		            android:layout_marginBottom="8dp"
-		            android:layout_marginTop="8dp"
+		            android:layout_marginBottom="@dimen/dp_8"
+		            android:layout_marginTop="@dimen/dp_8"
 		            android:background="#2B8B00" />
 		    </RelativeLayout>>
 		    <RelativeLayout
@@ -137,16 +137,16 @@
 		        android:background="@drawable/operation__bg"
 		        android:clickable="true" >
 			    <ImageView
-			        android:layout_width="36dp"
-			        android:layout_height="36dp"
+			        android:layout_width="@dimen/dp_36"
+			        android:layout_height="@dimen/dp_36"
 			        android:layout_centerInParent="true"
 			        android:background="@drawable/save_normal" />
 		    </RelativeLayout>>
 	    </LinearLayout>
 	    <RelativeLayout
 	        android:id="@+id/re_selectall"
-	        android:layout_width="80dp"
-	        android:layout_height="58dp"
+	        android:layout_width="@dimen/dp_80"
+	        android:layout_height="@dimen/dp_58"
 	        android:layout_alignParentRight="true"
 	        android:background="@drawable/operation__bg"
 	        android:clickable="true"
@@ -157,17 +157,17 @@
 	            android:layout_height="wrap_content"
 	            android:layout_alignParentRight="true"
 	            android:layout_centerVertical="true"
-	            android:layout_marginRight="10dp"
+	            android:layout_marginRight="@dimen/dp_10"
 	            android:text="全选"
 	            android:textColor="#ffffff"
-	            android:textSize="18sp" />
+	            android:textSize="@dimen/sp_18" />
 	    </RelativeLayout>
     </RelativeLayout>
     
     <RelativeLayout
         android:id="@+id/re_gpsinfo"
         android:layout_width="match_parent"
-    	android:layout_height="60dp"
+    	android:layout_height="@dimen/dp_60"
         android:layout_above="@id/re_operation"
     	android:background="@drawable/btn_list_item_bg">
 	    <TextView
@@ -176,18 +176,18 @@
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentLeft="true"
 	        android:layout_centerVertical="true"
-	        android:layout_marginLeft="10dp"
-	        android:layout_marginRight="10dp"
+	        android:layout_marginLeft="@dimen/dp_10"
+	        android:layout_marginRight="@dimen/dp_10"
 	        android:text="GPS未定位"
 	        android:ellipsize="end"
 	        android:textColor="#AAAAAA"
-	        android:textSize="15sp" />
+	        android:textSize="@dimen/sp_15" />
 	</RelativeLayout>
         
     <View
         android:id="@+id/view_temp1"
         android:layout_width="match_parent"
-        android:layout_height="0.1dp"
+        android:layout_height="@dimen/dp_0.1"
         android:layout_above="@id/re_gpsinfo"
         android:background="#d6d6d6" />
     
