--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -9,6 +9,6 @@
         android:layout_height="wrap_content"
         android:text="News Activity"
         android:layout_centerInParent="true"
-        android:textSize="20sp"/>
+        android:textSize="@dimen/sp_20"/>
 
 </RelativeLayout>
