--- a/app/src/main/res/layout/activity_voltage.xml
+++ b/app/src/main/res/layout/activity_voltage.xml
@@ -19,10 +19,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="@dimen/dp_10"
             android:text="智能巡检系统"
             android:textColor="#ffffff"
-            android:textSize="18sp" />
+            android:textSize="@dimen/sp_18" />
         <RelativeLayout
             android:id="@+id/re_setting"
             android:layout_width="wrap_content"
@@ -32,90 +32,90 @@
             android:background="@drawable/title_bg"
             android:clickable="true" >
             <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_width="@dimen/dp_24"
+                android:layout_height="@dimen/dp_24"
+                android:layout_marginLeft="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_20"
                 android:layout_centerInParent="true"
                 android:background="@drawable/setting_icon" />
         </RelativeLayout>
     </RelativeLayout>
     <LinearLayout
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/dp_10"
         android:background="#F0F0F0"
-        android:padding="10dp"
+        android:padding="@dimen/dp_10"
         android:id="@+id/low_voltage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/dp_50"
+            android:layout_height="@dimen/dp_50"
             android:src="@drawable/caid__50"/>
         <TextView
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="低压"
-            android:textSize="18sp"
-            android:layout_margin="5dp"
+            android:textSize="@dimen/sp_18"
+            android:layout_margin="@dimen/dp_5"
             android:layout_gravity="center"/>
         <ImageView
             android:layout_gravity="center"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="@dimen/dp_30"
+            android:layout_height="@dimen/dp_30"
             android:src="@drawable/caid__06"/>
     </LinearLayout>
     <LinearLayout
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginBottom="@dimen/dp_10"
         android:background="#F0F0F0"
-        android:padding="10dp"
+        android:padding="@dimen/dp_10"
         android:id="@+id/medium_voltage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/dp_50"
+            android:layout_height="@dimen/dp_50"
             android:src="@drawable/caid__22"/>
         <TextView
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="中压"
-            android:textSize="18sp"
-            android:layout_margin="5dp"
+            android:textSize="@dimen/sp_18"
+            android:layout_margin="@dimen/dp_5"
             android:layout_gravity="center"/>
         <ImageView
             android:layout_gravity="center"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="@dimen/dp_30"
+            android:layout_height="@dimen/dp_30"
             android:src="@drawable/caid__06"/>
     </LinearLayout>
     <LinearLayout
         android:background="#F0F0F0"
-        android:padding="10dp"
+        android:padding="@dimen/dp_10"
         android:id="@+id/high_voltage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/dp_50"
+            android:layout_height="@dimen/dp_50"
             android:src="@drawable/caid__65"/>
         <TextView
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="高压"
-            android:textSize="18sp"
-            android:layout_margin="5dp"
+            android:textSize="@dimen/sp_18"
+            android:layout_margin="@dimen/dp_5"
             android:layout_gravity="center"/>
         <ImageView
             android:layout_gravity="center"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="@dimen/dp_30"
+            android:layout_height="@dimen/dp_30"
             android:src="@drawable/caid__06"/>
     </LinearLayout>
 </LinearLayout>
