--- a/app/src/main/res/layout/item_catagoryone.xml
+++ b/app/src/main/res/layout/item_catagoryone.xml
@@ -23,11 +23,26 @@
         android:layout_centerVertical="true" >
 
         <ImageView
-            android:id="@+id/iv_avatar"
+            android:visibility="gone"
+            android:id="@+id/iv_avatar_low"
             android:layout_width="50dp"
             android:layout_height="50dp"
         	android:layout_centerInParent="true"
-            android:src="@drawable/caid__42" />
+            android:src="@drawable/caid__50" />
+        <ImageView
+            android:visibility="gone"
+            android:id="@+id/iv_avatar_middle"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/caid__22" />
+        <ImageView
+            android:visibility="gone"
+            android:id="@+id/iv_avatar_high"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/caid__65" />
     </RelativeLayout>
 
     <TextView
